# aria-arm64-bridge

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: DEVELOPER_DIARY.md
docs/project/: ARIA_CONNECTION_GUIDE.md  DOCUMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  NEXT_SESSION.md  RELEASE_GUIDE.md  RESEARCH.md  VALIDATION_GUIDE.md
docs/teamwork/: PAIR_WORKFLOW.md
examples/: basic_consumer.py
scripts/: launch_pipeline.sh  setup_fex_emu.sh  setup_rootfs.sh  test_import.sh  test_streaming.sh
src/aria_arm64_bridge/: __init__.py  bridge.py  observer.py  protocol.py  receiver.py  telemetry.py
src/bridge/: aria_bridge_observer.py  frame_consumer.py
src/receiver/: aria_receiver.py  mock_receiver.py
tests/: test_bridge_observer.py  test_zmq_pipeline.py
